# Grimoire

./: .env.example  .env.security.example  .gitignore  Claude.md  LICENSE  README.md  VALIDATION_RESULTS.md  alembic.ini  app.py  docker-compose.security.yml  docker-compose.yml  grimoire.yaml.example  pyproject.toml  rag_pipeline.py  ruff.toml
.claude/agents/: grimoire-api-cli.md  grimoire-content.md  grimoire-infra.md  grimoire-ingestion.md  grimoire-qa.md  grimoire-query.md
.claude/skills/grimoire-orchestrator/: SKILL.md
alembic/: README  env.py
alembic/versions/: 0001_initial.py  0002_add_fulltext_gin_index.py  0003_add_wiki_tables.py  0004_add_api_keys_table.py  0005_add_generated_content_is_error.py  0006_add_security_metadata.py
docs/: CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_GRIM.md  Code-review-May26.md  DESIGN.md  IMPLEMENTATION.md  security-sources.md
docs/deploy/: hetzner_security.md
docs/fixes/: CODE_REVIEW.md  DETAILED_FIX_PLAN.md  Grimoire_plan.md
docs/plans/: docs-list-and-generate-by-category.md  security_strategy_plan.md
docs/strategies/: README.md  chunking.md  configuration.md  extractor.md  metadata.md  retriever.md  source_types.md  usage.md
docs/superpowers/plans/: 2026-04-08-code-review-fixes.md  2026-04-20-wiki-tool.md
docs/superpowers/specs/: 2026-04-20-wiki-tool-design.md
grimoire/: __init__.py
grimoire/agents/: __init__.py  base.py  content_gen.py  coordinator.py  ingestion.py  query.py  watcher.py  wiki.py
grimoire/api/: __init__.py  auth.py  dependencies.py  main.py  rate_limit.py  schemas.py
grimoire/api/routes/: api_keys.py  categories.py  documents.py  generate.py  ingest.py  query.py  watch.py
grimoire/cli/: __init__.py  categories.py  config.py  docs.py  generate.py  helpers.py  ingest.py  keys.py  main.py  mcp.py  migrate.py  query.py  status.py  watch.py  wiki.py
grimoire/config/: __init__.py  default_categories.yaml  settings.py
grimoire/core/: __init__.py  cache.py  dedup.py  embedder.py  parser.py  reranker.py  tagger.py
grimoire/core/chunker/: __init__.py  base.py  markdown.py  recursive.py  semantic.py
grimoire/db/: __init__.py  base.py  models.py  session.py
grimoire/db/repositories/: __init__.py
grimoire/mcp/: __init__.py  auth_stdio.py  router.py  server.py  tools.py
grimoire/search/: __init__.py  fulltext.py  hybrid.py  vector.py
grimoire/storage/: __init__.py  base.py  gdrive.py  local.py  onedrive.py  watch_manager.py
grimoire/strategies/: __init__.py  base.py  loader.py
grimoire/strategies/security/: __init__.py  chunker.py  corpus.py  extractor.py  metadata.py  retriever.py
grimoire/strategies/security/parsers/: __init__.py  mitre.py  nvd.py  sigma.py
grimoire/utils/: __init__.py  hash.py  logger.py  observability.py  path.py  rate_limit.py  token_crypto.py
grimoire/vectorstore/: __init__.py  base.py  chromadb.py
scripts/: create-categories.sh
scripts/security/: seed_corpus.sh
tests/: __init__.py  conftest.py  test_abstract_classes.py  test_api.py  test_api_filters.py  test_cache.py  test_chunker.py  test_cli.py  test_config_validation.py  test_content_gen_agent.py  test_coordinator_agent.py  test_db_migrations.py  test_db_models.py  test_dedup.py  test_embedder.py  test_fulltext.py  test_hybrid.py  test_ingestion_agent.py  test_mcp.py  test_parser.py  test_query_agent.py  test_security.py  test_storage_gdrive.py  test_storage_local.py  test_storage_onedrive.py  test_tagger.py  test_vectorstore.py  test_watch_manager.py  test_watcher_agent.py  test_wiki_agent.py  test_wiki_cli.py
tests/deploy/: test_compose_overlay.py
tests/fixtures/sample_docs/: sample.html  sample.md  sample.txt
tests/fixtures/security/mitre/: T1059.md  attack-pattern.json
tests/fixtures/security/nvd/: nvdcve-sample.json
tests/fixtures/security/sigma/: sample_rules.yml
tests/integration/: conftest.py  test_live_api.py  test_performance.py
tests/strategies/: test_base.py  test_corpus.py  test_loader.py  test_metadata.py  test_metadata_extractor.py  test_mitre_parser.py  test_nvd_parser.py  test_security_chunker.py  test_security_retriever.py  test_sigma_parser.py
